--- a/深入浅出数据分析.md
+++ b/深入浅出数据分析.md
@@ -21,6 +21,16 @@
 - A/B测试
 
 ### 假设检验
-- x：假设H y：证据E 按强度识别
+- 证伪法（x：假设H y：证据E - 按强度识别）
 
 ### 贝叶斯统计
+- 假阳性与真阴性
+- 二次贝叶斯，第二次的基础概率将改变
+
+### 主观概率
+- 精确规范（概率集合的一维散点图）
+- 标准偏差
+- 贝叶斯统计下的标准差
+
+### 启发法
+- 快省树
