--- a/深入浅出数据分析.md
+++ b/深入浅出数据分析.md
@@ -1,4 +1,4 @@
-## Chapter 1
+## Chapter 1 思想
 ###  确定 -- 分解 -- 评估 -- 决策
 - 确定
   - 听取反馈
@@ -9,6 +9,7 @@
   - 心智模型（http://www.woshipm.com/pmd/826143.html）
 - 决策
 
+## Chapter 2 手段
 ### 实证检验
 - 市场调查表
 - 随机控制实验
@@ -20,6 +21,7 @@
 - 散点图（y轴为勘察因素；实线：平均值；虚线：目标值）
 - A/B测试
 
+## chapter 3 模型
 ### 假设检验
 - 证伪法（x：假设H y：证据E - 按强度识别）
 
@@ -34,3 +36,9 @@
 
 ### 启发法
 - 快省树
+
+### 直方图
+- 总集和子集的关系
+
+### 回归
+- 
