--- a/深入浅出数据分析.md
+++ b/深入浅出数据分析.md
@@ -25,7 +25,7 @@
 ### 假设检验
 - 证伪法（x：假设H y：证据E - 按强度识别）
 
-### 贝叶斯统计
+### 贝叶斯统计 （http://mindhacks.cn/2008/09/21/the-magical-bayesian-method/）
 - 假阳性与真阴性
 - 二次贝叶斯，第二次的基础概率将改变
 
@@ -41,4 +41,17 @@
 - 总集和子集的关系
 
 ### 回归
-- 
+- 相关系数
+- 线性方程
+- 最小二乘法与最大似然估计（http://sbp810050504.blog.51cto.com/2799422/1269572）
+- 外插法
+- 残差分布
+- 分区模型
+
+### 关系数据库
+- jitter
+- RDBMS
+
+### 整理数据
+- 保存副本
+- R/Excel
