--- a/python for data wrangling/python for data wrangling.ipynb
+++ b/python for data wrangling/python for data wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -2392,7 +2392,9 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a.loc['e']={'one':np.nan,'three':np.nan} #None=np.nan"
@@ -2401,7 +2403,9 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a.loc['f']={'one':24,'three':np.nan}"
@@ -2488,19 +2492,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "命令语法不正确。\n"
+     "ename": "AttributeError",
+     "evalue": "module 'pandas' has no attribute 'to_json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-3709cc1a1545>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_json\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'to_json'"
      ]
     }
    ],
    "source": [
-    "!type "
+    "pd.to_json"
    ]
   },
   {
