--- a/一个b2c平台的可视化分析.ipynb
+++ b/一个b2c平台的可视化分析.ipynb
@@ -52,7 +52,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 注释\n",
+    "# 10月留言分析（品牌、行业）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- 直接从pysql读取\n",
     "    - 以留言动作为主体\n",
     "    - 以用户各项属性为主体 \n",
@@ -79,7 +85,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    conn = mysql.connect(host='192.168.8.172', port=3306, user='analyst_user', \\\n",
+    "    conn = mysql.connect(host='192.***.*.***', port=****, user='analyst_user', \\\n",
     "                           passwd='234joiU#%hj6kh*#5HFk@$35',db='jmw_message',charset='utf8')\n",
     "    cur = conn.cursor()\n",
     "    sql_brand = 'SELECT v1.sname as 一级行业,v2.sname as 二级行业, p.brand_name as 品牌, COUNT(DISTINCT(t.telphone)) as 留言数 FROM t_message as t \\\n",
@@ -1573,7 +1579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
