--- a/一个b2c平台的可视化分析.ipynb
+++ b/一个b2c平台的可视化分析.ipynb
@@ -25,13 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<button onclick=\"$('.input, .output_stderr, .output_error, .output_result').toggle();\">Toggle Code</button>\n",
+       "<button onclick=\"$('.input, .output_stderr, .output_error').toggle();\">Toggle Code</button>\n",
        "#button onclick[1]:.prompt, 去掉前面的编号"
       ],
       "text/plain": [
@@ -44,7 +46,7 @@
    ],
    "source": [
     "%%HTML\n",
-    "<button onclick=\"$('.input, .output_stderr, .output_error, .output_result').toggle();\">Toggle Code</button>\n",
+    "<button onclick=\"$('.input, .output_stderr, .output_error').toggle();\">Toggle Code</button>\n",
     "#button onclick[1]:.prompt, 去掉前面的编号"
    ]
   },
